--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "setout",
   "version": "1.0.0",
   "description": "social media platform to showcase the places  you visit",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node -r dotenv/config app"
+    "build": "babel src --out-dir dist",
+    "dev": "nodemon --exec npm run restart",
+    "restart": "rimraf dist && npm run build && ncp src/views dist/views && ncp src/public dist/public && npm run start",
+    "start": "node -r dotenv/config dist/index.js"
   },
   "author": "Ayush Gupta",
   "license": "MIT",
@@ -21,6 +24,24 @@
     "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "ncp": "^2.0.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2"
   }
 }
